--- a/css/main.css
+++ b/css/main.css
@@ -18,3 +18,22 @@ figcaption {
   font-style: italic;
   text-algin: center:
 }
+
+nav {
+  font-size: 1.125rem;
+  font-weight: bold;
+}
+
+nav ol {
+  list-style-type: none;
+}
+
+nav a {
+  color: #793284;
+  text-decoration: none;
+}
+
+nav a {
+  color: #793284;
+  text-decoration: none;
+}
