--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 html {
   background-color: #f2f1ed;
-  font-family: Georgia, serif;
+  font-family: 'Patua One' sans-serif;
   line-height: 1.5;
 }
 
@@ -11,6 +11,7 @@ img {
 h1, h2 {
   color: #5d8432;
   text-transform: uppercase;
+  font-family: 'Patua One', sans-serif;
 }
 
 figcaption {
