--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 html {
   background-color: #f2f1ed;
-  font-family: 'Patua One' sans-serif;
+  font-family: "Patua One", sans-serif;
   line-height: 1.5;
 }
 
@@ -11,13 +11,13 @@ img {
 h1, h2 {
   color: #5d8432;
   text-transform: uppercase;
-  font-family: 'Patua One', sans-serif;
+  font-family: "Patua One", sans-serif;
 }
 
 figcaption {
   font-size: .8rem;
   font-style: italic;
-  text-algin: ;center:
+  text-align: center;
 }
 
 nav {
@@ -34,16 +34,11 @@ nav a {
   text-decoration: none;
 }
 
-nav a {
-  color: #793284;
-  text-decoration: none;
-}
-
 nav a:hover {
   color: #b42885;
   text-decoration: underline;
 }
 
 .intro {
-  font-size: 11rem;
+  font-size: 1rem;
 }
